--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main.o function.o "flip\ functions.o"
-LINKOBJ  = main.o function.o "flip functions.o"
+OBJ      = main.o function.o "flip\ functions.o" "flip\ functions_black.o"
+LINKOBJ  = main.o function.o "flip functions.o" "flip functions_black.o"
 LIBS     = -L"C:/Users/777sh/Dev-Cpp/MinGW64/lib" -L"C:/Users/777sh/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Users/777sh/Dev-Cpp/MinGW64/include" -I"C:/Users/777sh/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Users/777sh/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Users/777sh/Dev-Cpp/MinGW64/include" -I"C:/Users/777sh/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Users/777sh/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Users/777sh/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -32,3 +32,6 @@ function.o: function.c
 
 "flip\ functions.o": flip\ functions.c
 	$(CC) -c "flip functions.c" -o "flip functions.o" $(CFLAGS)
+
+"flip\ functions_black.o": flip\ functions_black.c
+	$(CC) -c "flip functions_black.c" -o "flip functions_black.o" $(CFLAGS)
